enabled settings.json that unity created

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,14 +43,14 @@
         "**/*.meta":true,
         "**/*.prefab":true,
         "**/*.unity":true,
-        "build/":true,
-        "Build/":true,
-        "Library/":true,
-        "library/":true,
-        "obj/":true,
-        "Obj/":true,
-        "ProjectSettings/":true,
-        "temp/":true,
-        "Temp/":true
+        "**/build/":true,
+        "**/Build/":true,
+        "**/Library/":true,
+        "**/library/":true,
+        "**/obj/":true,
+        "**/Obj/":true,
+        "**/ProjectSettings/":true,
+        "**/temp/":true,
+        "**/Temp/":true
     }
 }
